--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">症状机</string>
-    <string name="ill_name">诊断结果：半部器官衰竭</string>
-    <string name="answer">解决办法：无法治愈</string>
+    <string name="ill_name">诊断结果：（这里你自己来定）</string>
+    <string name="answer">解决办法：（这里你自己来定）</string>
 </resources>
